--- a/sub/apiTest/package.json
+++ b/sub/apiTest/package.json
@@ -13,8 +13,10 @@
     "express": "^4.13.2",
     "express-handlebars": "^3.0.0",
     "express-session": "^1.11.3",
+    "foursquarevenues": "^2.0.0",
     "jquery": "^2.2.1",
     "mysql": "^2.8.0",
+    "node-foursquare": "^0.3.0",
     "nonce": "^1.0.3",
     "oauth-signature": "^1.3.1",
     "request": "^2.69.0"
