Updated readme and makefile

--- a/file-transfer/makefile
+++ b/file-transfer/makefile
@@ -1,4 +1,8 @@
-OBJS = ftserver.o
+DIR1 = include/
+DIR2 = src/
+INC=$(DIR1) $(DIR2)
+INC_PARAMS=$(foreach d, $(INC), -I$d)
+OBJS = ftserver.o main.o
 CXX = g++
 DEBUG = -g
 CFLAGS = -O0 -c -std=c++0x -Wall -pedantic ${DEBUG}
@@ -7,9 +11,11 @@ LFLAGS = -Wall ${DEBUG}
 ftserver : ${OBJS}
 	${CXX} ${LFLAGS} ${OBJS} -o ftserver
 
-ftserver.o :  ftserver.cpp
-	${CXX} ${CFLAGS} ftserver.cpp
+ftserver.o :  src/ftserver.cpp
+	${CXX} ${CFLAGS} src/ftserver.cpp
 
+main.o : src/main.cpp
+	$(CXX) ${CFLAGS} src/main.cpp
 
 clean:
 	rm -f *.o ftserver
